# multi_modal_emotion_classifier

./: .gitignore  README.md  pyproject.toml
multi_modal_emotion_classifier/: run.py
tests/: test_multi_modal_emotion_classifier.py
